# erlang-rsync

./: .travis.yml  Makefile  README.md  configure  configure.ac  rebar.config  rebar.config.script
c_src/: rsync.c
doc/: overview.edoc.in
src/: rsync.app.src  rsync.app.src.in  rsync.erl
test/: delta  local_content  remote_content  rsync_test.erl  signature
